--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,15 @@ MESSAGE(STATUS "Water Surface src dir: ${WATER_SURFACE_SRC_DIR}")
 SET(WATER_SURFACE_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
 MESSAGE(STATUS "Water Surface bin dir: ${WATER_SURFACE_BIN_DIR}")
 SET(WATER_SURFACE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
+IF(CMAKE_COMPILER_IS_GNUCXX)
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+    SET(ENV{QTDIR} "/usr/local/Trolltech/Qt-4.8.3")
+ELSEIF(MSVC)
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4251") # dll interface
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4244") # int to float
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4351") # array init new behavior
+ENDIF()
 
 SET(CMAKE_AUTOMOC TRUE)
 
